--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <link rel="stylesheet" href="css/main.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
   <title>Frontend Mentor | Single Price Grid Component</title>
@@ -15,31 +15,37 @@
   </style>
 </head>
 <body>
-  Join our community
+  <div class="price-component">
+    <section class="join-our-community">
+        Join our community
 
-  30-day, hassle-free money back guarantee
+      30-day, hassle-free money back guarantee
 
-  Gain access to our full library of tutorials along with expert code reviews. 
-  Perfect for any developers who are serious about honing their skills.
+      Gain access to our full library of tutorials along with expert code reviews. 
+      Perfect for any developers who are serious about honing their skills.
+    </section>
+    <section class="monthly-subcription">
+        Monthly Subscription
 
-  Monthly Subscription
+        &dollar;29 per month
+      
+        Full access for less than &dollar;1 a day
+      
+        Sign Up
+    </section>
+    <section class="why-us">
+        Why Us
 
-  &dollar;29 per month
+        Tutorials by industry experts
+        Peer &amp; expert code review
+        Coding exercises
+        Access to our GitHub repos
+        Community forum
+        Flashcard decks
+        New videos every week
+    </section>
+  </div>
 
-  Full access for less than &dollar;1 a day
-
-  Sign Up
-
-  Why Us
-
-  Tutorials by industry experts
-  Peer &amp; expert code review
-  Coding exercises
-  Access to our GitHub repos
-  Community forum
-  Flashcard decks
-  New videos every week
-  
   <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
