--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
     <section class="monthly-subcription">
         <h2>Monthly Subscription</h2>
         <div class="price-container">
-          <span class="price">&dollar; 29 </span>
-          <span class="period"> per month</span>
+          <span class="price">&dollar;29 </span>
+          <span class="period">&nbsp; per month</span>
         </div>
         
       
@@ -55,7 +55,7 @@
   <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
+      Coded by <a href="#">Jarek Trzybiński</a>.
     </p>
   </footer>
 </body>
