--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
   <div class="price-component">
-    <section class="join-our-community">
+    <div class="join-our-community">
       <h1>Join our community</h1>
 
       <h2>30-day, hassle-free money back guarantee</h2>
@@ -25,8 +25,8 @@
         Gain access to our full library of tutorials along with expert code reviews. 
         Perfect for any developers who are serious about honing their skills.
       </p>
-    </section>
-    <section class="monthly-subcription">
+    </div>
+    <div class="monthly-subcription">
         <h2>Monthly Subscription</h2>
         <div class="price-container">
           <span class="price">&dollar;29 </span>
@@ -37,8 +37,8 @@
         <p>Full access for less than &dollar;1 a day</p>
       
         <button>Sign Up</button>
-    </section>
-    <section class="why-us">
+      </div>
+    <div class="why-us">
         <h2>Why Us</h2>
         <ul>
           <li>Tutorials by industry experts</li>
@@ -49,7 +49,7 @@
           <li>Flashcard decks</li>
           <li>New videos every week</li>
         </ul> 
-    </section>
+      </div>
   </div>
 
   <footer>
